updating output by embedding the self.inputform within the the self.out widgets that are to updated must be wrapped in an output. Here it was outside.

--- a/ipyrun/_filecontroller.ipynb
+++ b/ipyrun/_filecontroller.ipynb
@@ -2,32 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2cac0591701147b2abaa0d382e2fd73b",
+       "model_id": "8bdb095ea6c44d9483d71febcfeaf6d0",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(HBox(children=(Button(button_style='success', description='save changes', style=ButtonStyle(fon…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "661bfd64a06a4606aeeea7d6f5101f0e",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
+       "VBox(children=(VBox(children=(HBox(children=(Button(button_style='success', description='save changes', style=…"
       ]
      },
      "metadata": {},
@@ -45,7 +31,7 @@
     "from datetime import datetime\n",
     "import time\n",
     "\n",
-    "from mf_modules.pydtype_operations import read_json, read_yaml\n",
+    "#from mf_modules.pydtype_operations import read_json, read_yaml\n",
     "\n",
     "def _markdown(value='_Markdown_',\n",
     "              **kwargs):\n",
@@ -104,6 +90,8 @@
     "        )\n",
     "        self.load = widgets.VBox([self.load_button,self.choose_inputs])\n",
     "        self.inputform = _markdown(value='*TESTING*')\n",
+    "        \n",
+    "        self._init_controls()\n",
     "    \n",
     "    def _init_controls(self):\n",
     "        self.save_changes.on_click(self._save_changes)\n",
@@ -121,9 +109,14 @@
     "        fpth = self.fpth_inputs\n",
     "        dateTimeObj = datetime.now()\n",
     "        self.save_timestampStr = dateTimeObj.strftime(\"%d-%b-%Y %H:%M:%S\")\n",
-    "        self.inputform = _markdown(value='{0} saved at: {1}'.format(fpth, self.save_timestampStr))\n",
     "        self.update_display()\n",
     "        self.display()\n",
+    "        with self.out:\n",
+    "            clear_output()\n",
+    "            display(self.inputform)\n",
+    "            if self.load_inputs.value:\n",
+    "                display(self.load_button)\n",
+    "                display(self.choose_inputs)\n",
     "\n",
     "    def _load(self,sender):\n",
     "        self.update_display()\n",
@@ -175,8 +168,8 @@
     "        self.layout = widgets.VBox([self.button_bar, self.inputform])\n",
     "\n",
     "    def display(self):\n",
-    "        display(self.layout)\n",
-    "        display(self.out)\n",
+    "        display(widgets.VBox([self.layout, self.out]))\n",
+    "        #display(self.out)\n",
     "\n",
     "    def _ipython_display_(self):\n",
     "        self.update_display()\n",
@@ -208,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +232,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.3"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
