main commit! current version should work. there are no doubt bugs. and i'm updating the examples section.

--- a/ipyrun/_ipydisplayfile.ipynb
+++ b/ipyrun/_ipydisplayfile.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
     "import ipywidgets as widgets\n",
     "from markdown import markdown\n",
     "\n",
-    "from mf_modules.display_module_docstring import display_module_docstring\n",
+    "from mf_modules.mydocstring_display import display_module_docstring\n",
     "from mf_modules.pandas_operations import del_matching\n",
     "from mf_modules.jupyter_formatting import md_fromfile\n",
     "from mf_modules.jupyter_formatting import display_python_file\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,13 +282,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5bb03690eb094fcca3072ca752975085",
+       "model_id": "c1a437c7623e4d2fa148656752ca1490",
        "version_major": 2,
        "version_minor": 0
       },
@@ -302,7 +302,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "08f0aa91f5ef42ee87e56ce01e8c9832",
+       "model_id": "2afb6e2668b24e84a3bf1498597bc640",
        "version_major": 2,
        "version_minor": 0
       },
@@ -316,7 +316,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3b7ca2cde4794ab792c530081d8d07d1",
+       "model_id": "2c87bf8d584841a095bfd3de3097cd1f",
        "version_major": 2,
        "version_minor": 0
       },
