--- a/ipyrun/_runconfig.ipynb
+++ b/ipyrun/_runconfig.ipynb
@@ -2,19 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {
     "lines_to_next_cell": 2
    },
    "outputs": [],
    "source": [
     "import os\n",
-    "FDIR = os.path.dirname(os.path.realpath('__file__'))\n",
-    "from shutil import copyfile\n",
     "import importlib.util\n",
+    "from shutil import copyfile\n",
     "from mf_modules.datamine_functions import recursive_glob\n",
     "from mf_modules.file_operations import make_dir\n",
-    "from mf_modules.pydtype_operations import write_json\n",
+    "from mf_modules.pydtype_operations import write_json    \n",
+    "FDIR = os.path.dirname(os.path.realpath('__file__'))\n",
     "\n",
     "class RunConfig():\n",
     "\n",
@@ -29,21 +29,21 @@
     "                (the user can then choose from templates or previous versions)\n",
     "        for simplicity and standardisation, it is strongly suggested that the defaults\n",
     "        defined by this class are used. This allows the developer to pass minimal information\n",
-    "        and receive an out-of-the-box configuration. That said, if more information is passed \n",
-    "        in the config dict the user-defined inputs will always be favoured allowing for custom \n",
+    "        and receive an out-of-the-box configuration. That said, if more information is passed\n",
+    "        in the config dict the user-defined inputs will always be favoured allowing for custom\n",
     "        configurations. The required folders are created when the script runs.\n",
-    "        \n",
+    "\n",
     "        Args:\n",
     "            config (di): a user configuration dict defining the script location and file\n",
     "                locations of outputs and log file\n",
-    "                \n",
+    "\n",
     "        Example:\n",
     "            ```\n",
     "            config={\n",
     "                'fpth_script':os.path.join(os.environ['mf_root'],r'MF_Toolbox\\dev\\mf_scripts\\eplus_pipework_params.py'),\n",
     "                'fdir':'.',\n",
     "                }\n",
-    "            m = ManageInputConfig(config)\n",
+    "            m = RunConfig(config)\n",
     "            from pprint import pprint\n",
     "            >>> pprint(m.config)\n",
     "            {'fdir': '.',\n",
@@ -70,7 +70,7 @@
     "             'process_name': 'eplus_pipework_params'}\n",
     "             ```\n",
     "        \"\"\"\n",
-    "        self.config = config\n",
+    "        self.config = config.copy()\n",
     "        self.user_keys = list(config.keys())\n",
     "        self.errors = []\n",
     "        self._update_config()\n",
@@ -86,14 +86,15 @@
     "        # assign vars\n",
     "        self.fdir = self._fdir()\n",
     "        self.jobno = self._jobno()\n",
+    "        self.fpth_script = self.config['fpth_script']\n",
     "        self.script_outputs_template = self._script_outputs_template()\n",
-    "        self.fdir_template_inputs = self._fdir_template_inputs()\n",
-    "        self.fpth_template_input = self._fpth_template_input()\n",
-    "        self.template_input_ext = self._template_input_ext()\n",
     "        self.process_name = self._process_name()\n",
     "        self.pretty_name = self._pretty_name()\n",
     "        self.fdir_inputs = self._fdir_inputs()\n",
     "        self.fdir_inputs_archive = self._fdir_inputs_archive()\n",
+    "        self.fdir_template_inputs = self._fdir_template_inputs()\n",
+    "        self.fpth_template_input = self._fpth_template_input()\n",
+    "        self.template_input_ext = self._template_input_ext()\n",
     "        self.fpth_inputs = self._fpth_inputs()\n",
     "        self.fpth_inputs_options = self._fpth_inputs_options() #dict\n",
     "        self.script_outputs = self._update_script_outputs() #dict\n",
@@ -104,7 +105,8 @@
     "        self.fdir_config = self._fdir_config()\n",
     "        self.fnm_config = self._fnm_config()\n",
     "        self.fpth_config = os.path.join(self.fdir_config, self.fnm_config)\n",
-    "        \n",
+    "        self.fdir_outputs = self._fdir_outputs()\n",
+    "\n",
     "        # update config\n",
     "        self.config['fdir'] = self.fdir\n",
     "        self.config['jobno'] = self.jobno\n",
@@ -122,14 +124,18 @@
     "        self.config['fdir_config'] = self.fdir_config\n",
     "        self.config['fnm_config'] = self.fnm_config\n",
     "        self.config['fpth_config'] = self.fpth_config\n",
+    "        self.config['fdir_outputs'] = self.fdir_outputs\n",
     "\n",
     "    def _fdir(self):\n",
     "        \"\"\"check if fdir given, otherwise put it local to app\"\"\"\n",
     "        if 'fdir' in self.user_keys:\n",
-    "            return self.config['fdir']\n",
+    "            return os.path.realpath(self.config['fdir'])\n",
     "        else:\n",
-    "            return '.'\n",
-    "        \n",
+    "            return os.path.realpath('.')\n",
+    "\n",
+    "    def _fdir_outputs(self):\n",
+    "        return [os.path.realpath(v['fdir']) for k, v in self.script_outputs.items()]\n",
+    "\n",
     "    def _jobno(self):\n",
     "        \"\"\"check if fdir given, otherwise put it local to app\"\"\"\n",
     "        if self.fdir == '.':\n",
@@ -168,7 +174,7 @@
     "        else:\n",
     "            make_dir(os.path.join(self.fdir,r'appdata\\inputs'))\n",
     "            return os.path.join(self.fdir,r'appdata\\inputs')\n",
-    "        \n",
+    "\n",
     "    def _fdir_inputs_archive(self):\n",
     "        # add inputs folder name\n",
     "        if 'fdir_inputs_archive' in self.user_keys:\n",
@@ -186,10 +192,10 @@
     "                              pattern='*'+'inputs-' + self.script_name+'.*',\n",
     "                              recursive=True)\n",
     "        if len(fpth)==0:\n",
-    "            self.errors.append('could not find template input: {0}'.format(os.path.join(self.fdir_inputs, self.process_name)))\n",
+    "            tmp = 'could not find template input: {0}'.format(os.path.join(self.fdir_inputs, self.process_name))\n",
+    "            self.errors.append(tmp)\n",
+    "            fpth.append(tmp)\n",
     "        return fpth[0]\n",
-    "    \n",
-    "\n",
     "\n",
     "    def _template_input_ext(self):\n",
     "        return os.path.splitext(self.fpth_template_input)[1]\n",
@@ -200,7 +206,7 @@
     "        if not os.path.isfile(dstn):\n",
     "            copyfile(src, dstn)\n",
     "        return dstn\n",
-    "    \n",
+    "\n",
     "    def _fpth_inputs_options(self):\n",
     "        patterns = ['*' + self.process_name + '*', '*' + self.script_name + '*']\n",
     "        patterns = list(set(patterns))\n",
@@ -216,8 +222,8 @@
     "            },\n",
     "        }\n",
     "        # NOTE. this is no longer how it gets the project files...\n",
-    "        # these are taken from the log.csv ouptut. \n",
-    "        \n",
+    "        # these are taken from the log.csv ouptut.\n",
+    "\n",
     "        cnt = 0\n",
     "        valid_exts = ['.csv','.json']\n",
     "        for k,v in di.items():\n",
@@ -242,7 +248,7 @@
     "            return self.config['fnm_log']\n",
     "        else:\n",
     "            return 'log-' + self.process_name + '.csv'\n",
-    "        \n",
+    "\n",
     "    def _fdir_config(self):\n",
     "        if 'fdir_config' in self.user_keys:\n",
     "            fdir = self.config['fdir_config']\n",
@@ -252,7 +258,7 @@
     "            fdir = os.path.join(self.fdir,r'appdata\\config')\n",
     "            make_dir(fdir)\n",
     "            return fdir\n",
-    "        \n",
+    "\n",
     "    def _fnm_config(self):\n",
     "        if 'fnm_config' in self.user_keys:\n",
     "            return self.config['fnm_config']\n",
@@ -263,10 +269,17 @@
     "        \"\"\"\n",
     "        looks in the script file and finds and returns object called \"script_outputs\"\n",
     "        \"\"\"\n",
-    "        spec = importlib.util.spec_from_file_location(self.script_name, self.config['fpth_script'])\n",
-    "        foo = importlib.util.module_from_spec(spec)\n",
-    "        spec.loader.exec_module(foo)\n",
-    "        return foo.script_outputs\n",
+    "        if os.path.isfile(self.fpth_script):\n",
+    "            spec = importlib.util.spec_from_file_location(self.script_name, self.fpth_script)\n",
+    "            foo = importlib.util.module_from_spec(spec)\n",
+    "            spec.loader.exec_module(foo)\n",
+    "            try:\n",
+    "                script_outputs = foo.script_outputs\n",
+    "            except:\n",
+    "                script_outputs = {'0' : 'no script outputs found in {0}'.format(self.fpth_script)}\n",
+    "        else:\n",
+    "            script_outputs = {'0' : '{0} script does not exist'.format(self.fpth_script)}\n",
+    "        return script_outputs\n",
     "\n",
     "    def _update_script_outputs(self):\n",
     "        \"\"\"overwrites the template fpth outputs with the user defined ones\"\"\"\n",
@@ -279,53 +292,60 @@
     "                for _k,_v in v.items():\n",
     "                    di[k][_k] = self.config['script_outputs'][k][_k]\n",
     "            return di\n",
-    "        \n",
+    "\n",
     "    def _fpths_outputs(self):\n",
-    "        fnms = []\n",
-    "        fpths = []\n",
+    "        fnms = {}\n",
+    "        fpths = {}\n",
     "        for k, v in self.script_outputs.items():\n",
-    "            fnms.append(v['fnm'])\n",
-    "            fpths.append(os.path.join(v['fdir'],v['fnm']))\n",
+    "            fnms.update({k:v['fnm']})\n",
+    "            fpths.update({k:os.path.realpath(os.path.join(v['fdir'],v['fnm']))})\n",
     "        return fnms, fpths\n",
-    "            \n",
+    "\n",
     "    def config_to_json(self):\n",
     "        write_json(self.config,\n",
     "                   sort_keys=True,\n",
     "                   indent=4,\n",
     "                   fpth=self.config['fpth_config'],\n",
     "                   print_fpth=False,\n",
-    "                   openFile=False)\n"
+    "                   openFile=False)\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'fdir': '.',\n",
-      " 'fdir_config': '.\\\\appdata\\\\config',\n",
-      " 'fdir_inputs': '.\\\\appdata\\\\inputs',\n",
-      " 'fdir_inputs_archive': '.\\\\appdata\\\\inputs\\\\archive',\n",
-      " 'fdir_log': '.\\\\appdata\\\\log',\n",
+      "{'fdir': 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\ipyrun',\n",
+      " 'fdir_config': 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\ipyrun\\\\appdata\\\\config',\n",
+      " 'fdir_inputs': 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\ipyrun\\\\appdata\\\\inputs',\n",
+      " 'fdir_inputs_archive': 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\ipyrun\\\\appdata\\\\inputs\\\\archive',\n",
+      " 'fdir_log': 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\ipyrun\\\\appdata\\\\log',\n",
+      " 'fdir_outputs': ['C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\data\\\\external'],\n",
       " 'fnm_config': 'config-eplus_pipework_params.json',\n",
       " 'fnm_log': 'log-eplus_pipework_params.csv',\n",
-      " 'fpth_config': '.\\\\appdata\\\\config\\\\config-eplus_pipework_params.json',\n",
-      " 'fpth_inputs': '.\\\\appdata\\\\inputs\\\\inputs-eplus_pipework_params.csv',\n",
-      " 'fpth_inputs_options': {'project': {'fdir': '.\\\\appdata\\\\inputs',\n",
-      "                                     'fpths': ['.\\\\appdata\\\\inputs\\\\inputs-eplus_pipework_params-1.csv',\n",
-      "                                               '.\\\\appdata\\\\inputs\\\\inputs-eplus_pipework_params.csv',\n",
-      "                                               '.\\\\appdata\\\\inputs\\\\archive\\\\20200605-1625-inputs-eplus_pipework_params.csv',\n",
-      "                                               '.\\\\appdata\\\\inputs\\\\archive\\\\20200605-1625inputs-eplus_pipework_params.csv']},\n",
+      " 'fpth_config': 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\ipyrun\\\\appdata\\\\config\\\\config-eplus_pipework_params.json',\n",
+      " 'fpth_inputs': 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\ipyrun\\\\appdata\\\\inputs\\\\inputs-eplus_pipework_params.csv',\n",
+      " 'fpth_inputs_options': {'project': {'fdir': 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\ipyrun\\\\appdata\\\\inputs',\n",
+      "                                     'fpths': ['C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\ipyrun\\\\appdata\\\\inputs\\\\inputs-eplus_pipework_params-1.csv',\n",
+      "                                               'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\ipyrun\\\\appdata\\\\inputs\\\\inputs-eplus_pipework_params.csv',\n",
+      "                                               'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\ipyrun\\\\appdata\\\\inputs\\\\archive\\\\20200605-1625-inputs-eplus_pipework_params.csv',\n",
+      "                                               'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\ipyrun\\\\appdata\\\\inputs\\\\archive\\\\20200605-1625inputs-eplus_pipework_params.csv',\n",
+      "                                               'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\ipyrun\\\\appdata\\\\inputs\\\\archive\\\\20200607_1420-jg-inputs-eplus_pipework_params.csv',\n",
+      "                                               'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\ipyrun\\\\appdata\\\\inputs\\\\archive\\\\20200611_1021-jg-inputs-eplus_pipework_params.csv']},\n",
       "                         'template': {'fdir': 'C:\\\\engDev\\\\git_mf\\\\MF_Toolbox\\\\dev\\\\mf_scripts\\\\template_inputs',\n",
       "                                      'fpths': ['C:\\\\engDev\\\\git_mf\\\\MF_Toolbox\\\\dev\\\\mf_scripts\\\\template_inputs\\\\inputs-eplus_pipework_params.csv']}},\n",
-      " 'fpth_log': '.\\\\appdata\\\\log\\\\log-eplus_pipework_params.csv',\n",
+      " 'fpth_log': 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\ipyrun\\\\appdata\\\\log\\\\log-eplus_pipework_params.csv',\n",
       " 'fpth_script': 'C:\\\\engDev\\\\git_mf\\\\MF_Toolbox\\\\dev\\\\mf_scripts\\\\eplus_pipework_params.py',\n",
-      " 'fpths_outputs': ['..\\\\data\\\\external\\\\eplus_pipework_params.csv'],\n",
-      " 'jobno': 'engDev',\n",
+      " 'fpths_outputs': {'0': 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\data\\\\external\\\\eplus_pipework_params.csv'},\n",
+      " 'jobno': 'C:\\\\e',\n",
       " 'pretty_name': 'eplus_pipework_params',\n",
       " 'process_name': 'eplus_pipework_params',\n",
       " 'script_outputs': {'0': {'description': 'a csv lookup table with the backend '\n",
@@ -338,42 +358,18 @@
     }
    ],
    "source": [
+    "#  THIS CONFIG SETUP SHOULD BE BROKEN IN MULTIPLE SMALLER CLASSES THAT ARE COMBINED TO CREATE THE ONE BELOW. \n",
+    "#  THIS WOULD ALLOW FOR, SAY, THE GENERATION OF THE INPUTS FILEPATHS WITHOUT THINKING ABOUT THE SCRIPT, ETC... \n",
+    "\n",
     "if __name__ =='__main__':\n",
-    "    config={\n",
+    "    config = {\n",
     "        'fpth_script':os.path.join(os.environ['mf_root'],r'MF_Toolbox\\dev\\mf_scripts\\eplus_pipework_params.py'),\n",
     "        'fdir':'.',\n",
     "        }\n",
     "    from pprint import pprint\n",
     "    rc = RunConfig(config)\n",
-    "    pprint(rc.config)\n"
+    "    pprint(rc.config)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\ipyrun'"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "FDIR"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
