added model_runs examples and first pass at interface

--- a/ipyrun/_ipyblocks.ipynb
+++ b/ipyrun/_ipyblocks.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c7b44fa3070b4146bd51e943e002eb92",
+       "model_id": "41589fbeb41543a79d9c632d7695811c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -197,6 +197,13 @@
     "                    layout=widgets.Layout(width='5%'))\n",
     "    display(_help)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -219,7 +226,76 @@
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
-    "state": {},
+    "state": {
+     "254fe49e0e1042a0a542115b881f4653": {
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "1.2.0",
+      "model_name": "LayoutModel",
+      "state": {
+       "width": "5%"
+      }
+     },
+     "41589fbeb41543a79d9c632d7695811c": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "1.5.0",
+      "model_name": "ButtonModel",
+      "state": {
+       "icon": "question-circle",
+       "layout": "IPY_MODEL_254fe49e0e1042a0a542115b881f4653",
+       "style": "IPY_MODEL_94e650565540421aabb11d2f920d0380",
+       "tooltip": "gives guidance"
+      }
+     },
+     "4777d20677ed42bdb0f601f7c2b87006": {
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "1.2.0",
+      "model_name": "LayoutModel",
+      "state": {
+       "align_items": "stretch",
+       "display": "flex",
+       "flex_flow": "row",
+       "justify_content": "space-between",
+       "width": "100%"
+      }
+     },
+     "94e650565540421aabb11d2f920d0380": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "1.5.0",
+      "model_name": "ButtonStyleModel",
+      "state": {
+       "font_weight": "bold"
+      }
+     },
+     "e2dd45f4881845669682bd88abe39715": {
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "1.2.0",
+      "model_name": "LayoutModel",
+      "state": {
+       "height": "30px"
+      }
+     },
+     "e4cef5c734374dd5a2c8d46d2c7c2380": {
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "1.2.0",
+      "model_name": "LayoutModel",
+      "state": {
+       "border": "dashed 1px",
+       "height": "30px"
+      }
+     },
+     "ebd8a294853f433c846d59e44df45afa": {
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "1.2.0",
+      "model_name": "LayoutModel",
+      "state": {
+       "align_items": "stretch",
+       "border": "solid 3px green",
+       "display": "flex",
+       "flex_flow": "column",
+       "width": "60%"
+      }
+     }
+    },
     "version_major": 2,
     "version_minor": 0
    }
