added 04_eg_gbxml.ipynb example
bug fix:
nested objects from the RunApp

--- a/examples/notebooks/03_eg_ModelRuns.ipynb
+++ b/examples/notebooks/03_eg_ModelRuns.ipynb
@@ -86,6 +86,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "FPTH = r'..\\..\\data\\model_runs\\model_runs-partL.xlsm'\n",
+    "xl = ExcelIn(FPTH)\n",
+    "mruns = xl.pytable\n",
+    "m = Mruns(mruns.set_index('file_prefix'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
