--- a/examples/notebooks/00_MakingARunAppWidget.ipynb
+++ b/examples/notebooks/00_MakingARunAppWidget.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "04ea67cfab2c4e6d995b541103313335",
+       "model_id": "a52543f946de4703a0fa0c1676202b59",
        "version_major": 2,
        "version_minor": 0
       },
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -299,13 +299,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "91015100f65646158a53ef212fb51a6d",
+       "model_id": "ab49a94423894d6fb93975ec8d50c700",
        "version_major": 2,
        "version_minor": 0
       },
@@ -319,7 +319,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f623ce8a8db84c44a8efbd7bc7eac84b",
+       "model_id": "977f0bc5c38d4a958968193ba17d2c44",
        "version_major": 2,
        "version_minor": 0
       },
@@ -333,7 +333,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "045eea048b9d458ca439b368d2240587",
+       "model_id": "30d00cb4094f475eb9c965b50dfd1c85",
        "version_major": 2,
        "version_minor": 0
       },
@@ -347,7 +347,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3748cd9436f54bf59699bf216a25e099",
+       "model_id": "c99068465efa4e1da6f2cf11bd3db685",
        "version_major": 2,
        "version_minor": 0
       },
@@ -361,7 +361,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d347dc364e96420283b01ed1123fad54",
+       "model_id": "f5beaa60c625482793cf0fff5ee45a48",
        "version_major": 2,
        "version_minor": 0
       },
@@ -375,7 +375,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "41f2ed19ea41417993bcf4a87e8efac2",
+       "model_id": "570d6fd6b6b94dc0be3a9f37c4553bf7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -389,7 +389,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dd2c204aaa5e48a5a4316bd44d26441b",
+       "model_id": "4c01078b58414e6ebdf07f5354269fd0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -403,7 +403,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "28c240e0855544beaefec24605527e5e",
+       "model_id": "3eb38f9c5e7842769ad5357f9535e8c4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -554,7 +554,7 @@
       "        ```\n",
       "        config={\n",
       "            'fpth_script':os.path.join(os.environ['mf_root'],r'MF_Toolbox\\dev\\mf_scripts\\docx_to_pdf.py'),\n",
-      "            'fdir':FDIR,\n",
+      "            'fdir':NBFDIR,\n",
       "            }    \n",
       "    \n",
       "        r = RunApp(config) \n",
@@ -580,13 +580,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c713b933cd2b464a85a1804e84fdb4fb",
+       "model_id": "40aadd5758d04f6bb389ee7f7304dee2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -600,7 +600,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "23166c5d2c8b4793b94e0617011d3235",
+       "model_id": "8c1d378b1c0b4bb987fc33660bfe5640",
        "version_major": 2,
        "version_minor": 0
       },
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -662,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -800,13 +800,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8e18799104684148b930e3e239ce99a0",
+       "model_id": "ce72593ffe8343ff911a063263d6d1f7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -820,7 +820,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "acc853787a914ce4a1c68d8f6b6e894e",
+       "model_id": "34fb6d381a85455db5be5a32c0003fc9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -834,27 +834,22 @@
    ],
    "source": [
     "# it is now good to go!\n",
+    "\n",
+    "# IMPRESS PEOPLE! \n",
+    "# add a BSRIA KW rule of thumb option - so you can compare + sense check\n",
+    "# output a to a Revit family?\n",
+    "# get height difference from the model... (define the floor, get floors from Revit model... )\n",
+    "# error checking! \n",
+    "# link\n",
+    "\n",
     "config={\n",
     "    'fpth_script':os.path.realpath(fpth_script),\n",
     "    'fdir':NBFDIR,\n",
-    "    }  \n",
+    "    }\n",
+    "\n",
     "r = RunApp(config)\n",
-    "r "
+    "r"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
