Added DatePicker to Widget List

--- a/ipyrun/_ipyeditjson.ipynb
+++ b/ipyrun/_ipyeditjson.ipynb
@@ -149,6 +149,7 @@
     "                'FloatText':widgets.FloatText,\n",
     "                'FloatSlider':widgets.FloatSlider,\n",
     "                'Dropdown':widgets.Dropdown,\n",
+    "                'DatePicker':widgets.DatePicker,\n",
     "                'SelectMultiple':widgets.SelectMultiple,\n",
     "                'Checkbox':widgets.Checkbox,\n",
     "                'Text':widgets.Text,\n",
@@ -189,7 +190,13 @@
     "        self.widget_only.observe(self._update_change, 'value') \n",
     "\n",
     "    def _update_change(self, change):\n",
-    "        self.di['value'] = self.widget_only.value\n",
+    "        value = None\n",
+    "        if(self.widget_name == \"DatePicker\"):\n",
+    "            print(self.widget_only.value)\n",
+    "            value = self.widget_only.value.strftime('%d/%m/%Y')\n",
+    "        else:\n",
+    "            value = self.widget_only.value\n",
+    "        self.di['value'] = value\n",
     "\n",
     "    def _build_widget(self):\n",
     "        \n",
@@ -197,6 +204,9 @@
     "            self._recursive_guess()\n",
     "        elif self.widget_name == 'ipysheet':\n",
     "            self._ipysheet()\n",
+    "        elif self.widget_name == \"DatePicker\":\n",
+    "            value = datetime.strptime(self.kwargs['value'], '%d/%m/%Y')\n",
+    "            self.widget_only = self.widget_lkup[self.widget_name](value=value)\n",
     "        else:\n",
     "            self.widget_only = self.widget_lkup[self.widget_name](**self.kwargs)\n",
     "        self.widget_simple = widgets.HBox([self.widget_only,_markdown(self.di['label'])],layout=self.MF_FORM_ITEM_LAYOUT)\n",
